@@ -1,29 +1,0 @@
-# $NetBSD: Makefile,v 1.10 2012/10/29 05:07:04 asau Exp $
-#
-
-DISTNAME=	xf86-video-imstt-1.1.0
-PKGREVISION=	3
-CATEGORIES=	x11
-MASTER_SITES=	${MASTER_SITE_XORG:=driver/}
-EXTRACT_SUFX=	.tar.bz2
-
-MAINTAINER=	joerg@NetBSD.org
-HOMEPAGE=	http://xorg.freedesktop.org/
-COMMENT=	Modular Xorg IMS Twin Turbo 128 video driver
-
-BROKEN=		Broken with xserver 1.6 and up
-
-USE_LIBTOOL=	yes
-GNU_CONFIGURE=	yes
-USE_TOOLS+=	pkg-config
-
-.include "../../mk/bsd.prefs.mk"
-
-.if ${OPSYS} == "SunOS"
-CONFIGURE_ENV+=	DRIVER_MAN_SUFFIX=4
-.endif
-
-.include "../../x11/modular-xorg-server/buildlink3.mk"
-.include "../../x11/randrproto/buildlink3.mk"
-.include "../../x11/renderproto/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
